# learn

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  clang.yml  gcc.yml
app/pong/: CMakeLists.txt  main.cpp
cmake/: project_add_executable.cmake  project_add_library.cmake  project_compile_options.cmake
cmake/preset/: config-build-dir.json  config-debug.json  config-release.json  config-relwithdebinfo.json  host-arm64-linux.json  host-arm64-osx.json  host-arm64-windows.json  host-x64-linux.json  host-x64-windows.json  target-arm64-android.json  target-arm64-linux.json  target-arm64-osx.json  target-arm64-windows.json  target-wasm32-emscripten.json  target-x64-android.json  target-x64-linux.json  target-x64-windows.json  use-clang.json  use-emscripten.json  use-gcc.json  use-msvc.json  use-ninja.json  use-vcpkg.json  use-visualstudio.json
cmake/triplets/: arm64-osx-druid.cmake  arm64-windows-druid.cmake  x64-android-druid.cmake  x64-linux-druid.cmake  x64-windows-druid.cmake
src/core/: CMakeLists.txt  Concepts.ixx  EnumMask.ixx  File.ixx
src/core/test/: CMakeLists.txt  EnumMask.test.cpp
src/graphics/: CMakeLists.txt  Color.ixx  Event.ixx  Pipeline.ixx  Renderer.ixx  Vertex.ixx  Window.ixx
src/graphics/shaders/: default.vert
triplets/: arm64-android-aspire.cmake
